# aguaje

./: CMakeLists.txt  main.cpp
animales/: CMakeLists.txt  tigre.cpp
animales/include/: tigre.hpp
common/: CMakeLists.txt  logging.cpp
common/include/: logging.hpp
paises/: CMakeLists.txt  mexico.cpp
paises/include/: mexico.hpp
workflow/: CMakeLists.txt  implementation.cpp
workflow/include/: implementation.hpp
